# code_crawler

./: .gitignore  CodeCrawler_Architecture.md  CodeGraph_Architecture.md  README.md  design_idea.md  pyproject.toml
DOCS/: design_idea.md  v4.5_template.md  v4_design_idea.md  v4_study_guide.md  v4_version_roadmap.md  v5_architecture.md  version_roadmap.md  workflow_diagram.md
codecrawler/: __init__.py  __main__.py  cli.py  native_accel.py
codecrawler/analyzers/: __init__.py  build_detector.py  buildroot.py  compile_db.py  kernel.py  yocto.py
codecrawler/config/: __init__.py  defaults.py
codecrawler/core/: __init__.py  config.py  cross_linker.py  data_flow.py  event_bus.py  graph_analysis.py  pipeline.py  registry.py  scope_resolver.py  types.py
codecrawler/crawlers/: __init__.py  base.py  bitbake_crawler.py  c_crawler.py  dts_crawler.py  go_crawler.py  python_crawler.py  rust_crawler.py  shell_crawler.py
codecrawler/export/: __init__.py  ctags_export.py  diagram_gen.py
codecrawler/intelligence/: __init__.py  proactive_agent.py  summarizer.py  telemetry.py
codecrawler/mcp/: __init__.py  server.py
codecrawler/plugins/: __init__.py  base.py  loader.py  registry.py
codecrawler/storage/: __init__.py  database.py  graph.py  schema.py  vector.py  writer.py
codecrawler/tiering/: __init__.py  classifier.py  manifest_builder.py  priority_scorer.py  repo_map.py
native/: Cargo.toml
native/src/: hasher.rs  lib.rs  scorer.rs  walker.rs
